src/test/ui/stability-attribute/generics-default-stability.stderr
error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:16:13
   |
LL | impl Trait1<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:20:13
   |
LL | impl Trait1<isize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:24:13
   |
LL | impl Trait2<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:35:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 1 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:39:20
   |
LL |     let _: Struct1<usize> = STRUCT1;
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:40:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 0 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:67:27
   |
LL |     let _: Struct3<isize, usize> = STRUCT3;
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:69:27
   |
LL |     let _: Struct3<isize, isize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:70:27
   |
LL |     let _: Struct3<usize, usize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0658`.
